--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,32 @@ build/
 ### VS Code ###
 .vscode/
 /logs/
+.gitignore
+README.md
+package-lock.json
+package.json
+public/
+src/
+
+# dependencies
+**/node_modules
+**/.pnp
+.pnp.js
+
+# testing
+**/coverage
+
+# production
+**/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+!/src/main/app/
