--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,11 @@
 
 	<properties>
 		<java.version>11</java.version>
+
+		<frontend-src-dir>${project.basedir}/src/main/app</frontend-src-dir>
+		<node.version>v12.18.2</node.version>
+		<yarn.version>v1.22.4</yarn.version>
+		<frontend-maven-plugin.version>1.10.0</frontend-maven-plugin.version>
 	</properties>
 
 	<dependencies>
